Inicio do Header

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,6 +5,7 @@
 :root {
   --background: #ffffff;
   --foreground: #171717;
+  
 }
 
 /* @media (prefers-color-scheme: dark) {
@@ -16,10 +17,21 @@
 
 html {
   scroll-behavior: smooth;
+  background-color: #15336C;
+  
 }
 
 body {
-  color: var(--foreground);
-  background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
+}
+
+
+#home {
+  background-image: url("/BG1.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+} 
+
+#header{
+  width: 90%;
 }
