--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -29,7 +29,7 @@ body {
 #home {
   background-image: url("/mask.png");
   background-repeat: no-repeat;
-  background-size: ;
+  background-size: cover;
 } 
 
 #header{
