--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -22,7 +22,7 @@ html {
 }
 
 body {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: (var(--font-geist-sans), sans-serif), var(--font-geist-mono);
 }
 
 
